<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EmotionsCheck">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/emotionsHolderContainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/emotionsCheckSubmit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <Button
            android:id="@+id/happyButton"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginEnd="200dp"
            android:background="@drawable/happy_button"
            app:layout_constraintEnd_toStartOf="@+id/contentButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/contentButton"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:background="@drawable/content_button"
            app:layout_constraintEnd_toStartOf="@+id/neutralButton"
            app:layout_constraintStart_toEndOf="@+id/happyButton"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/neutralButton"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginStart="200dp"
            android:background="@drawable/neutral_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/contentButton"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/upsetButton"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginTop="70dp"
            android:layout_marginEnd="200dp"
            android:background="@drawable/upset_button"
            app:layout_constraintEnd_toStartOf="@+id/sadButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/happy" />

        <Button
            android:id="@+id/sadButton"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginTop="70dp"
            android:background="@drawable/sad_emoji"
            app:layout_constraintEnd_toStartOf="@+id/angryButton"
            app:layout_constraintStart_toEndOf="@+id/upsetButton"
            app:layout_constraintTop_toBottomOf="@+id/content" />

        <Button
            android:id="@+id/angryButton"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginStart="200dp"
            android:layout_marginTop="70dp"
            android:background="@drawable/angry_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/sadButton"
            app:layout_constraintTop_toBottomOf="@+id/neutral" />

        <TextView
            android:id="@+id/happy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="Happy"
            app:layout_constraintEnd_toEndOf="@+id/happyButton"
            app:layout_constraintStart_toStartOf="@+id/happyButton"
            app:layout_constraintTop_toBottomOf="@+id/happyButton" />

        <TextView
            android:id="@+id/content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="Content"
            app:layout_constraintEnd_toEndOf="@+id/contentButton"
            app:layout_constraintStart_toStartOf="@+id/contentButton"
            app:layout_constraintTop_toBottomOf="@+id/contentButton" />

        <TextView
            android:id="@+id/neutral"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="Neutral"
            app:layout_constraintEnd_toEndOf="@+id/neutralButton"
            app:layout_constraintStart_toStartOf="@+id/neutralButton"
            app:layout_constraintTop_toBottomOf="@+id/neutralButton" />

        <TextView
            android:id="@+id/upset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="Upset"
            app:layout_constraintEnd_toEndOf="@+id/upsetButton"
            app:layout_constraintStart_toStartOf="@+id/upsetButton"
            app:layout_constraintTop_toBottomOf="@+id/upsetButton" />

        <TextView
            android:id="@+id/sad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="Sad"
            app:layout_constraintEnd_toEndOf="@+id/sadButton"
            app:layout_constraintStart_toStartOf="@+id/sadButton"
            app:layout_constraintTop_toBottomOf="@+id/sadButton" />

        <TextView
            android:id="@+id/mad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="Mad"
            app:layout_constraintEnd_toEndOf="@+id/angryButton"
            app:layout_constraintStart_toStartOf="@+id/angryButton"
            app:layout_constraintTop_toBottomOf="@+id/angryButton" />

        <Button
            android:id="@+id/under_influence"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginTop="70dp"
            android:background="@drawable/woozy_emoji"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sad" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="Under Influence"
            app:layout_constraintEnd_toEndOf="@+id/under_influence"
            app:layout_constraintStart_toStartOf="@+id/under_influence"
            app:layout_constraintTop_toBottomOf="@+id/under_influence" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:id="@+id/openDoorLogo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scaleType="fitXY"
        android:contentDescription="@string/alt_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/open_door_logo" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/emotions_question"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/openDoorLogo" />

    <Button
        android:id="@+id/emotionsCheckSubmit"
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:background="@drawable/button_shape"
        android:onClick="submitBtnClicked"
        android:text="@string/submit"
        android:textColor="@color/textColor"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emotionsHolderContainer" />

</androidx.constraintlayout.widget.ConstraintLayout>